--- a/index.ipynb
+++ b/index.ipynb
@@ -1057,7 +1057,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names_and_ranks = [city indices, city names] \n",
+    "names_and_ranks = ['city indices, 'city names'] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
