Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1059,7 +1059,7 @@
    "source": [
     "names_and_ranks = ['city indices', 'city names'] \n",
     "\n",
-    "for \n",
+    "for inde\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
