--- a/index.ipynb
+++ b/index.ipynb
@@ -1060,7 +1060,7 @@
     "names_and_ranks = ['city indices', 'city names'] \n",
     "\n",
     "for index in city_indices:\n",
-    "    pri\n",
+    "    priint(index)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
