--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,14 +1053,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-79735f2e9cc5>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-79735f2e9cc5>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    print(city indices[index] + city_names[index])\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "names_and_ranks = ['city indices', 'city names'] \n",
     "\n",
     "for index in city_indices:\n",
-    "    print(city indices[index] +city_names[index]\n",
+    "    print(city indices[index] + city_names[index])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
