--- a/index.ipynb
+++ b/index.ipynb
@@ -1072,7 +1072,7 @@
     "names_and_ranks = ['city indices', 'city names'] \n",
     "\n",
     "for index in names_and_ranks:\n",
-    "    print(city_indices+\",\", city_names)\n",
+    "    print(city_indices[index]+\",\", city_names[index])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
