--- a/index.ipynb
+++ b/index.ipynb
@@ -1071,7 +1071,7 @@
    "source": [
     "names_and_ranks = ['city indices', 'city names'] \n",
     "\n",
-    "for index in names_and_ranks:\n",
+    "for index in city_indices:\n",
     "    print(city_indices[index]+\",\", city_names[index])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
