--- a/index.ipynb
+++ b/index.ipynb
@@ -1058,6 +1058,10 @@
    "outputs": [],
    "source": [
     "names_and_ranks = ['city indices','city names'] \n",
+    "\n",
+    "for number in [city_indices]:\n",
+    "    print(city_indices[number]+\",\", city_names[index])\n",
+    "    \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
