--- a/index.ipynb
+++ b/index.ipynb
@@ -1069,7 +1069,7 @@
     }
    ],
    "source": [
-    "names_and_ranks = ['city indices','city names'] \n",
+    "names_and_ranks = [] \n",
     "\n",
     "for number in [names_and_ranks]:\n",
     "    print(city_indices[number]+\",\", city_names[index])\n",
