Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1115,7 +1115,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = []"
+    "city_populations = []\n",
+    "\n",
+    "for "
    ]
   },
   {
