Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1117,7 +1117,8 @@
    "source": [
     "city_populations = []\n",
     "\n",
-    "for "
+    "for city in cities:\n",
+    "    city_populations.append(city[])"
    ]
   },
   {
