--- a/index.ipynb
+++ b/index.ipynb
@@ -1118,7 +1118,9 @@
     "city_populations = []\n",
     "\n",
     "for city in cities:\n",
-    "    city_populations.append(city[])"
+    "    city_populations.append(city['Population'])\n",
+    "    \n",
+    "city_populations"
    ]
   },
   {
