--- a/index.ipynb
+++ b/index.ipynb
@@ -1136,11 +1136,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_populations[0] # 2891\n",
+    "print(city_populations[0] # 2891\n",
     "city_populations[1] # 2732\n",
     "city_populations[-1] # 0"
    ]
