Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2096,7 +2096,9 @@
     "city_areas = []\n",
     "\n",
     "for city in cities:\n",
-    "    cit"
+    "    city_areas.append(city['Area'])\n",
+    "    \n",
+    "    "
    ]
   },
   {
