--- a/index.ipynb
+++ b/index.ipynb
@@ -2089,16 +2089,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[203, 630, 230, 491, 3751, 68, 2000, 1464, 35, 26, 59, 2396]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_areas = []\n",
     "\n",
     "for city in cities:\n",
     "    city_areas.append(city['Area'])\n",
     "    \n",
-    "    "
+    "city_areas"
    ]
   },
   {
